--- a/public/themeapp/login.html
+++ b/public/themeapp/login.html
@@ -20,6 +20,7 @@
   <!--Import materialize.css-->
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
   <link type="text/css" rel="stylesheet" href="css/main.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="css/inputs.css" media="screen,projection" />
   <script src="js/modernizr.js"></script>
 </head>
 
@@ -29,6 +30,8 @@
 
 
   <section class="body_splash valign-wrapper">
+
+
     <div class="container">
       <div class="row ">
         <div class="col s12 text-center center">
